--- a/app/src/main/res/layout/layout_wisata.xml
+++ b/app/src/main/res/layout/layout_wisata.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content"
     app:cardCornerRadius="4dp"
     app:cardElevation="3dp"
+    app:cardMaxElevation="2dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
