--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -8,6 +8,33 @@
     tools:context=".ChangePassword">
 
     <EditText
+        android:id="@+id/txtPwEmail"
+        android:layout_width="330dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/bg_input"
+        android:ems="10"
+        android:fontFamily="@font/poppins"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPwEmail" />
+
+    <TextView
+        android:id="@+id/tvPwEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:fontFamily="@font/poppins"
+        android:text="Email"
+        android:textColor="#000"
+        app:layout_constraintStart_toStartOf="@+id/txtPwEmail"
+        app:layout_constraintTop_toBottomOf="@+id/imgChangePassword" />
+
+    <EditText
         android:id="@+id/txtNewPassword"
         android:layout_width="330dp"
         android:layout_height="48dp"
@@ -75,21 +102,20 @@
         android:paddingLeft="12dp"
         android:paddingRight="12dp"
         android:textSize="14sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvChangePasswordTitle"
-        app:layout_constraintHorizontal_bias="0.506"
-        app:layout_constraintStart_toStartOf="@+id/tvChangePasswordTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvOldPassword" />
 
     <TextView
         android:id="@+id/tvOldPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="12dp"
         android:fontFamily="@font/poppins"
         android:text="Masukkan Kata Sandi Lama"
         android:textColor="#000"
         app:layout_constraintStart_toStartOf="@+id/txtOldPassword"
-        app:layout_constraintTop_toBottomOf="@+id/imgChangePassword" />
+        app:layout_constraintTop_toBottomOf="@+id/txtPwEmail" />
 
     <TextView
         android:id="@+id/tvChangePasswordTitle"
@@ -124,7 +150,7 @@
         android:id="@+id/imgChangePassword"
         android:layout_width="120dp"
         android:layout_height="95dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="@+id/tvChangePasswordTitle"
         app:layout_constraintStart_toStartOf="@+id/tvChangePasswordTitle"
         app:layout_constraintTop_toBottomOf="@+id/tvChangePasswordTitle"
