--- a/app/src/main/res/layout/layout_informasi.xml
+++ b/app/src/main/res/layout/layout_informasi.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="160dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:scrollbars="horizontal"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="3dp"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="2dp"
+    app:cardMaxElevation="2dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="0dp">
 
         <ImageView
             android:id="@+id/imgInfo"
-            android:layout_width="160dp"
+            android:layout_width="210dp"
             android:layout_height="120dp"
             android:layout_alignParentTop="true"
             android:scaleType="centerCrop"
@@ -24,15 +25,19 @@
 
         <TextView
             android:id="@+id/descInfo"
-            android:layout_width="152dp"
-            android:layout_height="wrap_content"
+            android:layout_width="194dp"
+            android:layout_height="46dp"
             android:layout_below="@+id/imgInfo"
             android:layout_alignParentStart="false"
             android:layout_alignParentBottom="false"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:fontFamily="@font/poppins"
             android:text="Lorem ipsum dolor sit amet."
-            android:textSize="12sp" />
+            android:textColor="#000"
+            android:textSize="10sp" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
