--- a/app/src/main/res/layout/layout_wisata_populer.xml
+++ b/app/src/main/res/layout/layout_wisata_populer.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="160dp"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="4dp"
     app:cardElevation="3dp"
+    app:cardMaxElevation="2dp"
     app:cardUseCompatPadding="true">
 
     <RelativeLayout
@@ -27,9 +27,10 @@
             android:layout_below="@+id/imgWp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins"
             android:text="Nama Wisata"
+            android:textColor="#000"
             android:textSize="12sp" />
 
         <RelativeLayout
@@ -42,31 +43,38 @@
 
             <ImageView
                 android:id="@+id/imgMenuStar"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="2dp"
                 android:src="@drawable/ic_star" />
 
             <TextView
                 android:id="@+id/ratingWp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
                 android:layout_marginStart="4dp"
+                android:layout_marginTop="-1dp"
                 android:layout_toEndOf="@id/imgMenuStar"
                 android:fontFamily="@font/poppins_semibold"
                 android:text="5.0"
                 android:textColor="#EFBE05"
                 android:textSize="10sp" />
 
-            <TextView
-                android:id="@+id/descWp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:visibility="gone" />
-
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/descWp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="-1dp"
+            android:fontFamily="@font/poppins"
+            android:text="TextView"
+            android:visibility="gone" />
 
     </RelativeLayout>
 
