--- a/app/src/main/res/layout/activity_wisata.xml
+++ b/app/src/main/res/layout/activity_wisata.xml
@@ -48,7 +48,7 @@
             android:fontFamily="@font/poppins_semibold"
             android:text="Title"
             android:textColor="#000"
-            android:textSize="24sp"
+            android:textSize="20sp"
             app:layout_constraintStart_toStartOf="@+id/imgWisataPic"
             app:layout_constraintTop_toBottomOf="@+id/imgWisataPic" />
 
@@ -67,7 +67,7 @@
         <TextView
             android:id="@+id/tvWisataDesc"
             android:layout_width="352dp"
-            android:layout_height="36dp"
+            android:layout_height="55dp"
             android:layout_marginStart="30dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="30dp"
@@ -84,19 +84,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="Rating"
             android:textColor="#EFBE05"
-            android:textSize="20sp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imgWisataStar"
             app:layout_constraintStart_toEndOf="@+id/imgWisataStar"
-            app:layout_constraintTop_toBottomOf="@+id/tvWisataName" />
+            app:layout_constraintTop_toTopOf="@+id/imgWisataStar" />
 
         <ImageView
             android:id="@+id/imgWisataStar"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="13dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="@+id/tvWisataName"
             app:layout_constraintTop_toBottomOf="@+id/tvWisataName"
             app:srcCompat="@drawable/ic_star" />
