--- a/app/src/main/res/layout/layout_review.xml
+++ b/app/src/main/res/layout/layout_review.xml
@@ -32,23 +32,23 @@
 
         <ImageView
             android:id="@+id/imgReviewStar"
-            android:layout_width="17dp"
-            android:layout_height="17dp"
+            android:layout_width="12dp"
+            android:layout_height="12dp"
             android:layout_below="@+id/imgReviewPic"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="0dp"
+            android:layout_marginStart="2dp"
             android:layout_marginTop="8dp"
             app:srcCompat="@drawable/ic_star" />
 
         <TextView
             android:id="@+id/reviewRating"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignTop="@+id/imgReviewStar"
             android:layout_alignEnd="@+id/imgReviewPic"
             android:layout_alignBottom="@+id/imgReviewStar"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginTop="-4dp"
             android:layout_marginEnd="0dp"
             android:layout_marginBottom="0dp"
             android:layout_toEndOf="@+id/imgReviewStar"
